--- a/MySimpleLogin (dagger)/app/src/main/AndroidManifest.xml
+++ b/MySimpleLogin (dagger)/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dicoding.tourismapp">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    package="com.dicoding.mysimplelogin">
 
     <application
         android:name=".MyApplication"
@@ -11,22 +9,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TourismApp">
-
-        <activity
-            android:name=".MainActivity"
-            android:theme="@style/Theme.TourismApp.NoActionBar">
+        android:theme="@style/Theme.MySimpleLogin">
+        <activity android:name="com.dicoding.mysimplelogin.HomeActivity" />
+        <activity android:name="com.dicoding.mysimplelogin.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".detail.DetailTourismActivity"
-            android:label="@string/title_activity_detail_home"
-            android:theme="@style/Theme.TourismApp.NoActionBar" />
     </application>
 
 </manifest>
